1.4.0-developement
==================

  * Removed BBB code for CMFCorePermissions import location.
    [hannosch]

  * removed deprecation warning for ToolInit.
    [jensens]

  * skip backward compatibility to the times where MTR where part of 
    PortalTransforms.
    [jensens]

1.3.8-final02 - 2006-01-15
==========================

  * nothing - the odd version checking needs a version change to stick to
    Archetypes version again.
    [yenzenz]

1.3.8-RC1 - 2005-12-29
======================

  * Split yet another part of register() into a separate
    method. Cleanup smi_mimetypes initialize a little bit to to use
    the new method when adding new mimetypes to a already-registered
    entry.
    [dreamcatcher]

  * Include aliases in the list of mimetypes for a entry. Based on
    patch by Jean Jordaan
    [dreamcatcher]

  * Use a SAX-based parser instead of minidom to improve Zope startup
    time (by 17 seconds on my Pismo) and memory footprint.
    [dreamcatcher]

  * Augment known mimetypes with Windows mimetypes, if available.
    [dreamcatcher]

1.3.7-final01 - 2005-10-11
==========================

  * For the sake of sanity, include a 'mime.types' with
    MimetypesRegistry to minimize the platform-specific differences in
    mime detection when the python 'mimetypes' module is involved.
    [dreamcatcher]

  * globs from freedesktop.org shared-mime-info were incorrectly
    mapped to 'extensions' and never really worked because the code
    tried to strip a leading dot, where the globs normally had '*.'.

    The side-effect of this is that in *nix, the Python 'mimetypes'
    module would happily read '/etc/mime.types' and gracefully work
    (/etc/mime.types has most of the extensions of shared-mime-info
    but a few), where on Windows it would fail to detect mimetypes by
    extension.
    [dreamcatcher]

  * Added support for real globs, using fnmatch.translate and
    re.compile and a migration function that will be run from Plone